Java 11 deprecated features
Fehlende. externe SE 11 Kompatibilität lt. MAVEN

`WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by org.eclipse.ecf.provider.filetransfer.httpclient4.SNIAwareHttpClient$1 (file:/xxx/.m2/repository/org/eclipse/tycho/tycho-bundles-external/1.3.0/eclipse/plugins/org.eclipse.ecf.provider.filetransfer.httpclient4_1.1.300.v20180301-0132.jar) to method sun.security.ssl.SSLSocketImpl.setHost(java.lang.String)
see also https://bugs.eclipse.org/bugs/show_bug.cgi?id=535689

WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by com.thoughtworks.xstream.core.util.Fields (file:/xxx/.m2/repository/org/apache/servicemix/bundles/org.apache.servicemix.bundles.xstream/1.4.8_1/org.apache.servicemix.bundles.xstream-1.4.8_1.jar) to field java.util.TreeMap.comparator`